# dynamo

./: .gitignore  README.org  design.org  dune-project
lib/: dune  dynamo.ml  errors.ml  eval.ml  eval.mli  resolver.ml  resolver.mli
lib/reader/: ast.ml  ast_type.ml  ast_type.mli  dune  lexer.ml  lexer.mli  parser.mly  reader.ml  reader.mli  reader_.ml  reader_.mli  span.ml  span.mli  token.ml
test/: dune
